фиксы опечаток (много)

--- a/solutions/analysis/1.tex
+++ b/solutions/analysis/1.tex
@@ -49,7 +49,7 @@ $\{x_n\}$ - ограниченная числовая последователь
     \forall \varepsilon > 0 \; \exists n \in \N: \mathcal{I}^n \subset U_\varepsilon(x^*)
 \end{equation*}
 
-Но в $\mathcal{I}^n$ содержатся содержатся значения бесконечного количества элементов $\{x_n\}$. А значит и в $U_\varepsilon(x^*)$ в частности. Получается, что $\forall \varepsilon > 0$ в $U_\varepsilon(x^*)$ содержатся значения бесконечного количества элементов $\{x_n\}$.
+Но в $\mathcal{I}^n$ содержатся значения бесконечного количества элементов $\{x_n\}$. А значит и в $U_\varepsilon(x^*)$ в частности. Получается, что $\forall \varepsilon > 0$ в $U_\varepsilon(x^*)$ содержатся значения бесконечного количества элементов $\{x_n\}$.
 А это в свою очередь, по критерию частичного предела, значит, что $x^*$ - частичный предел.
 
 \Endproof
