--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -10,7 +10,7 @@
 \Def Последовательностью Гейне в точке $x_0 \in \hat\R$ называется такая последовательность $\{x_n\} \subset \R$:
 \begin{enumerate}
     \item $x_n \to x_0, n \to \infty$
-    \item $\forall n \in N \hookrightarrow x_n \neq x_0$
+    \item $\forall n \in \N \hookrightarrow x_n \neq x_0$
 \end{enumerate}
 
 \Def Пусть $x_0 \in \hat\R, A \in \hat\R$. Пусть $f: \mathring U_{\delta_0}(x_0) \to \R$. 
@@ -20,7 +20,7 @@
 
 \Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ непрерывна в точке $x_0$, если $\exists \lim\limits_{x \to x_0} f(x) = f(x_0)$.
 
-\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$.Будем говорить, что $f$ разрывна в точке $x_0$, если она не непрерывна в точке $x_0$.
+\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ разрывна в точке $x_0$, если она не непрерывна в точке $x_0$.
 
 \Note Не входит как в таковой билет, но в лекции говорится, что надо знать как <<отче наш>>. Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$.
 \begin{enumerate}
@@ -33,9 +33,9 @@
 
 \Def Класс всех непрерывных функций на $X$ будем обозначать $C(X)$.
 
-\Def Компактом $K \subset \R$ будем называть множество, если из каждой числовой последовательности в нём можно выделить сходяющуюся числовую подпоследовательность сходяющуюся в нём же.
+\Def Компактом $K \subset \R$ будем называть множество, если из каждой числовой последовательности в нём можно выделить сходящуюся подпоследовательность, сходящуюся к элементу этого же множества.
 
-\Theor{Эквивалентые определения компакта} Пусть $K \subset \R$. Тогда следующие услвоия эквивалентны:
+\Theor{Эквивалентые определения компакта} Пусть $K \subset \R$. Тогда следующие условия эквивалентны:
 \begin{enumerate}
     \item $K$ - компакт
     \item $K$ - ограниченное и замкнутое множество
