--- a/solutions/analysis/4.tex
+++ b/solutions/analysis/4.tex
@@ -5,7 +5,7 @@
     f'(x_0) = \lim\limits_{x \to x_0} \frac{f(x) - f(x_0)}{x - x_0}
 \end{equation*}
 
-\Def Будем говорить, что $f: U_{\delta_0} (x_0) \to \R$ диффернцируема в точке $x_0$ $\iff$ $\exists f'(x_0) \in \R$.
+\Def Будем говорить, что $f: U_{\delta_0} (x_0) \to \R$ дифференцируема в точке $x_0$ $\iff$ $\exists f'(x_0) \in \R$.
 
 \Def Пусть $f: X \to \R$. Будем говорить, что $x_0 \in X$ - точка локального минимума, если выполнены следующие условия:
 \begin{equation*}
@@ -24,7 +24,7 @@
 
 Покажем первый пункт, т.к. второй доказывается аналогично.
 
-По определнию локального минимума, $\exists \delta_0 > 0: \forall x \in U_{\delta_0}(x_0) \hookrightarrow f(x) \geq f(x_0) \iff f(x) - f(x_0) \geq 0$.
+По определению локального минимума, $\exists \delta_0 > 0: \forall x \in U_{\delta_0}(x_0) \hookrightarrow f(x) \geq f(x_0) \iff f(x) - f(x_0) \geq 0$.
 
 Значит верно, что:
 \begin{equation*}
@@ -38,22 +38,22 @@
 
 \Endproof
 
-\Def Пусть $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $x_0$ - точка локального экстремума, если и только если они точка локального минимума, либо максимума.
+\Def Пусть $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $x_0$ - точка локального экстремума, если и только если она точка локального минимума, либо максимума.
 
-\Theor{Ферма} Пусть $f: U_{\delta_0} (x_0) \to \R$ диффернцируема в $x_0$. Тогда коль скоро $x_0$ - точка локального экстремума, то $f'(x_0) = 0$.
+\Theor{Ферма} Пусть $f: U_{\delta_0} (x_0) \to \R$ дифференцируема в $x_0$. Тогда коль скоро $x_0$ - точка локального экстремума, то $f'(x_0) = 0$.
 
 \Proof
 
 Для определённости будем считать, что $x_0$ - точка локального максимума (для минимума аналогично).
 
-$f$ диффернцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x_0) = f'_+(x_0) \leq 0 \Rightarrow f'(x_0) = 0$.
+$f$ дифференцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x_0) = f'_+(x_0) \leq 0 \Rightarrow f'(x_0) = 0$.
 
 \Endproof
 
 
 Для локального максимума формулируется аналогичная теорема.
 
-\Theor{Ролля о среднем} Пусть $f \in C([a, b], \R)$, $f$ - диффернцируема на $(a, b)$, а также $f(a) = f(b)$. 
+\Theor{Ролля о среднем} Пусть $f \in C([a, b], \R)$, $f$ - дифференцируема на $(a, b)$, а также $f(a) = f(b)$. 
 Коль скоро это так, то $\exists \xi \in (a, b): f'(\xi) = 0$.
 
 \Proof
@@ -64,7 +64,7 @@ $f$ диффернцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x_0
 
 \Endproof
 
-\Theor{Коши о среднем} Пусть $f, g \in C([a, b], \R)$, $f, g$ - диффернцируемы на $(a, b)$. Также $\forall x \in (a, b) \hookrightarrow g'(x) \neq 0$. 
+\Theor{Коши о среднем} Пусть $f, g \in C([a, b], \R)$, $f, g$ - дифференцируемы на $(a, b)$. Также $\forall x \in (a, b) \hookrightarrow g'(x) \neq 0$. 
 Тогда $\exists \xi \in (a, b): \frac{f(b) - f(a)}{g(b) - g(a)} = \frac{f'(\xi)}{g'(\xi)}$.
 
 \Proof
@@ -91,7 +91,7 @@ $f$ диффернцируема в $x_0$, тогда $0 \leq f'_-(x_0) = f'(x_0
 
 \Endproof
 
-\Theor{Лангранжа о среднем} Пусть $f in C([a, b], \R)$, $f, g$ - диффернцируемы на $(a, b)$.
+\Theor{Лагранжа о среднем} Пусть $f \in C([a, b], \R)$, $f, g$ - дифференцируемы на $(a, b)$.
 Тогда $\exists \xi \in (a, b): \frac{f(b) - f(a)}{b - a} = f'(\xi)$.
 
 \Proof
