--- a/solutions/analysis/6.tex
+++ b/solutions/analysis/6.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Монотонность}
 
-\Th Пусть $f$ диффиренцируема на $(a, b)$. Тогда
+\Th Пусть $f$ дифференцируема на $(a, b)$. Тогда
 
 \begin{enumerate}
     \item $f'(x) \geq 0 \;\forall x\in (a, b) \quad\iff\quad f$ (нестр.) возрастает на $(a, b)$,
@@ -27,7 +27,7 @@
 
 Пункт 2 доказывается аналогично.
 
-Пусты 3 и 4 доказываются заменой аналогично, заменой нестрогих знаков на строгие.
+Пункты 3 и 4 доказываются заменой аналогично, заменой нестрогих знаков на строгие.
 
 \Endproof
 
@@ -157,7 +157,7 @@ $x_1 = x_0 - u; x_2 = x_0 + u$. $x_0 = \frac{x_1 + x_2}{2}$.
     f(x_2) = f(x_0) + f'(x_0) (x_2 - x_0) + \frac{f''(\xi_2)}{2!} (x_2 - x_0)^2.
 \end{gather*}
 
-Посколько вторые производные неотрицательны,
+Поскольку вторые производные неотрицательны,
 
 \begin{gather*}
     f(x_1) \geq f(x_0) + f'(x_0) (x_1 - x_0), \\
