--- a/solutions/analysis/7.tex
+++ b/solutions/analysis/7.tex
@@ -18,7 +18,7 @@
     \exists \eps > 0 \;\forall \delta > 0 \;\exists x, y \in A: \rho_X(x, y) < \delta \text{ и } \rho_Y(f(x), f(y)) \geq \eps.    
 \end{equation*}
 
-Раз это верно для любого $\delta$, то построим последовательности $\{x_k\}, \{y_k\}$, такие что $\rho_X(x_k, y_k) < \frac{1}{k}$ и $\rho_Y(f(x_k), f(x_y)) \geq \eps$ для $\forall k \in \N$.
+Раз это верно для любого $\delta$, то построим последовательности $\{x_k\}, \{y_k\}$, такие что $\rho_X(x_k, y_k) < \frac{1}{k}$ и $\rho_Y(f(x_k), f(y_k)) \geq \eps$ для $\forall k \in \N$.
 
 Раз $A$ -- компакт, из $\{x_k\}$ можно выделить сходящуюся в $A$ подпоследовательность: $x_{k_j} \to c \in A$. 
 
