--- a/solutions/analysis/8.tex
+++ b/solutions/analysis/8.tex
@@ -2,7 +2,7 @@
 
 В рамках этого билета считается, что $G \subset \R^n$ -- непустое открытое множество.
 
-\Def Функция $f: G \to \R$ называется дифференцируемой в точке $x^0 \in G$, если $\exists$ линейное отображение $A: \R^n \to \R$ (или, что то же самое, вектор $\overline{A}$), такое что $\forall h\in \R^n$ с достаточно малой нормой выполнено, что $f(x' + h) = f(x^0) + A(h) + o(||h||)$.
+\Def Функция $f: G \to \R$ называется дифференцируемой в точке $x^0 \in G$, если $\exists$ линейное отображение $A: \R^n \to \R$ (или, что то же самое, вектор $\overline{A}$), такое что $\forall h\in \R^n$ с достаточно малой нормой выполнено, что $f(x^0 + h) = f(x^0) + A(h) + o(\|h\|)$.
 
 При этом само отображение $A$ называется дифференциалом $f$ в точке $x^0$ и обозначается $d_x f$, а вектор $\overline{A}$ называется градиентом и обозначается $grad f(x_0)$ или $\nabla_{x_0} f$.
 
@@ -65,7 +65,7 @@
 
 \Theor{Первое необходимое условие дифференцируемости (в терминах непрерывности)}
 
-Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+Пусть $f: G \to \R$ дифференцируема в $x_0 \in G$. 
 
 Тогда она непрерывна в $x_0$. 
 
@@ -73,7 +73,7 @@
 
 \Theor{Второе необходимое условие дифференцируемости (в терминах производных по направлению)}
 
-Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+Пусть $f: G \to \R$ дифференцируема в $x_0 \in G$. 
 
 Тогда $\forall l \in \R^n \;\exists \frac{\partial f}{\partial l}(x^0)$, и причем $\frac{\partial f}{\partial l} (x^0) = <grad f(x^0), l>$.
 
@@ -92,7 +92,7 @@
 
 \Theor{Третье необходимое условие дифференцируемости (в терминах частных производных)}
 
-Пусть $f: G \to R$ дифференцируема в $x_0 \in G$. 
+Пусть $f: G \to \R$ дифференцируема в $x_0 \in G$. 
 
 Тогда $\forall i \in \{1, \dots, n\} \;\exists \frac{\partial f}{\partial x_i} (x^0) = \left(grad f(x^0)\right)_i$.
 
