--- a/solutions/differential/21.tex
+++ b/solutions/differential/21.tex
@@ -11,13 +11,13 @@
     \end{cases}
 \end{equation*}
 
-или $x' = Ax$, где $A\in Matr_{n \times n}(\R);\; x: I \rightarrow \R^n, I \subset R$.
+или $x' = Ax$, где $A\in Matr_{n \times n}(\R);\; x: I \rightarrow \R^n, I \subset \R$.
 
 \Note Так же, как и в случае одного ЛОДУ с постоянными коэффициентами, множество решений системы ЛОДУ с постоянными коэффициентами является линейным пространством.
 
 \subsubsection{Случай n различных собственных векторов}
 
-\Th Пусть $v_1, \dots, v_n$ -- попарно различные собственные вектора матрицы $A$, соответствующие \textbf{необязательно попарно различным} собственным значениям $\lambda_1, \dots, \lambda_n$.
+\Th Пусть $v_1, \dots, v_n$ -- попарно различные собственные векторы матрицы $A$, соответствующие \textbf{необязательно попарно различным} собственным значениям $\lambda_1, \dots, \lambda_n$.
 
 Тогда общее решение СЛОДУ имеет вид
 
@@ -169,7 +169,7 @@
 
 Пусть матрица $A$ имеет Жорданов базис, составленный из Жордановых цепочек, как описано в обозначениях выше.
 
-Тогда общее решениее СЛОДУ имеет вид
+Тогда общее решение СЛОДУ имеет вид
 
 \begin{equation*}
     x(t) = \sum_{k=1}^n C_k \psi_k(t).
@@ -181,7 +181,7 @@
 А значит, в силу линейности множества решений, любая функция такого вида $x(t)$ является решением.
 
 Покажем, что любое решение представимо в таком виде.
-Обозначим $\hat{x}(t)$ -- произвольное решение; $x_0 \coloneqq \hat{X}(0)$.
+Обозначим $\hat{x}(t)$ -- произвольное решение; $x_0 \coloneqq \hat{x}(0)$.
 
 Разложим $x_0$ по векторам Жорданового базиса: $x_0 = \sum_{k=1}^n C_k v_k$.
 Тогда $x(t) \coloneqq \sum_{k=1}^n C_k \psi_k(t)$, которая является решением, как доказано ранее.
