--- a/solutions/differential/22.tex
+++ b/solutions/differential/22.tex
@@ -9,7 +9,7 @@
 где $t \in I \subset \R, \; F:I \rightarrow \R^n;\; A(t) \in Matr_{n \times n}(\R) \; \forall t \in I;$.
 
 \Theorbd{О существовании и единственности решения ЗК для этого уравнения}
-Пусть $a_{a_{i,j}}, F_i \in C(I)$.
+Пусть $a_{i,j}, F_i \in C(I)$.
 
 Тогда $\forall (t_0, x_0) \in I \times \R^n \; \exists!$ непродолжаемое решение ЗК
 
