--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -22,7 +22,7 @@
     = \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \left(1 - \cos ((n+1)t)\right) = \frac{1}{n+1} \frac{\sin^2 \left(\frac{n+1}{2} t\right)}{\sin^2 \frac{t}{2}}
 \end{gather*}
 
-\textit{(Если $sin \frac{t}{2} = 0$, то $F_n(t) = n+1$)}
+\textit{(Если $\sin \frac{t}{2} = 0$, то $F_n(t) = n+1$)}
 
 Свойства:
 
@@ -41,7 +41,7 @@
 \begin{enumerate}
     \item Если $f$ равномерно непрерывна на $E \subset \R$, то $\sigma_n \overset{E}{\rightrightarrows} f$;
     \item Если $f$ непрерывна на $\R$, то $\sigma_n \overset{\R}{\rightrightarrows} f$;
-    \item \item Если $f$ непрерывна в точке $x_0$, то $\sigma_n(x_0) \rightarrow f(x_0)$;
+    \item Если $f$ непрерывна в точке $x_0$, то $\sigma_n(x_0) \rightarrow f(x_0)$;
 \end{enumerate}
 
 \Proof
