--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -31,7 +31,7 @@ $\blacksquare$
 
 $\square$
 
-Каждому сочетанию ровно сответствует ровно $k!$ размещений. Различным сочетаниям не может соответствовать одно и то же размещение.
+Каждому сочетанию соответствует ровно $k!$ размещений. Различным сочетаниям не может соответствовать одно и то же размещение.
 
 Значит $C_n^k = \frac{A_n^k}{k!} = \frac{n!}{(n-k)! k!}$
 
@@ -43,9 +43,9 @@ $\square$
 
 Заметим, что каждому такому сочетанию соответствует разбиение $k$ на $n$ неотрицательных целых слагаемых с учетом порядка.
 
-Рассмотрим $k$ белых и $n-1$ черный шарик.
+Рассмотрим $k$ белых и $n-1$ чёрных шариков.
 
-Расстивим их все в один ряд. Каждой получившейся цепочке однозначно соответствует разложение $k$ на $n$ неотирцательных целых слагаемых.
+Расставим их все в один ряд. Каждой получившейся цепочке однозначно соответствует разложение $k$ на $n$ неотрицательных целых слагаемых.
 
 Для доказательства построим биекцию. Пусть $k = k_1 + k_2 + \dots + k_n$. Ему будет соответствовать следующий набор:
 
@@ -71,12 +71,12 @@ $\blacksquare$
 
 \subsection{Биномиальный коэффициент}
 
-Расмотрим выражение $(x+y)^n$. Задача --- определить коэффициент при $x^ky^{n-k}$.
+Рассмотрим выражение $(x+y)^n$. Задача --- определить коэффициент при $x^ky^{n-k}$.
 
 Пронумеруем скобки следующим образом: $(x_1 + y_1)\cdot(x_2 + y_2) \cdot \dots \cdot (x_n + y_n)$. Заметим, что коэффициент будет равен количеству вариантов выбора $k$ cкобок, из которых будет выбран $x$. А значит равен $C_n^k$.
 
 \subsection{Полиномиальный коэффициент}
 
-Расмотрим выражение $(x_1 + x_2 + \dots + x_m)^n$. Задача --- определить коэффициент при $x^{n_1}x^{n_2}\dots x^{n_m}$, где $\displaystyle\sum_{i=1}^m x^{n_i} = n$.
+Рассмотрим выражение $(x_1 + x_2 + \dots + x_m)^n$. Задача --- определить коэффициент при $x^{n_1}x^{n_2}\dots x^{n_m}$, где $\displaystyle\sum_{i=1}^m x^{n_i} = n$.
 
 Занумеруем скобки. Выбрать скобки с $x_1$ будет $C_n^{n_1}$ способов. Из оставшихся с $x_2$ --- $C_{n-1}^{n_2}$ способов и т. д. В итоге получим $C_n^{n_1} \cdot C_{n-n_1}^{n_2}\dots C^{n_m}_{n - n_1 - n_2 - \dots - n_m} = \frac{n!}{n_1! \cdot n_2! \dots n_m!}$ способов.
