--- a/solutions/logic/29.tex
+++ b/solutions/logic/29.tex
@@ -2,11 +2,11 @@
 
 \Def \textit{Графом} называют $G = \langle V, E \rangle$. Где $V$ - множество объектов (вершин), а $E$ - множество пар объектов из $V$ (ребер).
 
-\Def Если считаем, что $\forall u, v \in V \; (u, v) = (v, u)$, то граф называется \textit{ориентированным}.
+\Def Если считаем, что $\forall u, v \in V \; (u, v) = (v, u)$, то граф называется \textit{неориентированным}.
 
-\Def Если считаем, что $\forall u, v \in V \; (u, v) \ne (v, u)$, то граф называется \textit{неориентированным}.
+\Def Если считаем, что $\forall u, v \in V \; (u, v) \ne (v, u)$, то граф называется \textit{ориентированным}.
 
-\Def Маршрутом в графе называют последовательность $(v_1, e_1, v_2, e_2 \dots e_k, v_{k+1})$, где $v_i \in V$, $e_i = (v_i, v_i{+1}) \in E$.
+\Def Маршрутом в графе называют последовательность $(v_1, e_1, v_2, e_2 \dots e_k, v_{k+1})$, где $v_i \in V$, $e_i = (v_i, v_{i+1}) \in E$.
 
 \Def \textit{Путь} --- маршрут, в котором все ребра различны.
 
