--- a/solutions/logic/31.tex
+++ b/solutions/logic/31.tex
@@ -113,6 +113,6 @@ $\square$
 
 $r_1, r_2, \dots r_{\varphi(n)}$
 
-Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа остануться взаимно простыми с $n$, при этом никакие не совпадают. Тогда $(a r_1) (a r_2) \dots (ar_{\varphi(n)}) \underset{n}{\equiv} r_1 r_2 \dots r_n \implies a^{\varphi(n)} \underset{n}{\equiv} 1$.
+Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа остануться взаимно простыми с $n$, при этом никакие не совпадают. Тогда $(a r_1) (a r_2) \dots (ar_{\varphi(n)}) \underset{n}{\equiv} r_1 r_2 \dots r_{\varphi(n)} \implies a^{\varphi(n)} \underset{n}{\equiv} 1$.
 
 $\blacksquare$
