--- a/solutions/analysis/5.tex
+++ b/solutions/analysis/5.tex
@@ -1,6 +1,6 @@
 \subsection{Формула Тейлора с остаточным членом в форме Пеано или Лагранжа.}
 
-\Def Пусть $n \in \N, f: U_{\delta_0} (x_0) \to \R$ имеет $n$-ую конечную производную в точке $x_0$. Тогда полиномом Тейлора функции $f$с центром в точке $x_0$ будем называеть следующую функцию:
+\Def Пусть $n \in \N, f: U_{\delta_0} (x_0) \to \R$ имеет $n$-ую конечную производную в точке $x_0$. Тогда полиномом Тейлора функции $f$с центром в точке $x_0$ будем называть следующую функцию:
 \begin{equation*}
     T_{x_0}^n[f](x) \overset{def}{=} \sum\limits_{k=0}^n \frac{f^{(k)} (x_0)}{k!} (x - x_0)^k
 \end{equation*}
@@ -49,7 +49,7 @@
 
 \Proof
 
-Заметим, что коль скоро $f$ $n$ раз диффернцируема в точке $x_0$, то она $(n-1)$-раз диффернцируема в некоторой её окрестности (в частности она непрерывна на замыкании этой окрестности).
+Заметим, что коль скоро $f$ $n$ раз дифференцируема в точке $x_0$, то она $(n-1)$-раз дифференцируема в некоторой её окрестности (в частности она непрерывна на замыкании этой окрестности).
 
 Вспомним тот факт, что:
 \begin{equation*}
@@ -74,7 +74,7 @@
     \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi}}{n\varphi_{n-1}(\xi)}
 \end{equation*}
 
-Даоее аналогично перепишем результат выше:
+Далее аналогично перепишем результат выше:
 \begin{equation*}
     \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi}}{n\varphi_{n-1}(\xi)} = \frac{1}{n} \cdot \frac{\left.r^n_{x_0}[f](x)'\right|_{x = \xi} - \underbrace{\left.r^n_{x_0}[f](x)'\right|_{x = x_0}}_{0}}{\varphi_{n-1}(\xi) - \underbrace{\varphi_{n-1}(x_0)}_{0}}
 \end{equation*}
@@ -110,7 +110,7 @@
 
 \Endproof
 
-\Theor{Формула Тейлора с остаточным членом в форме Лангранжа} Пусть $\exists f^{(n+1)}(x), \forall x \in U_\delta(x_0)$, тогда
+\Theor{Формула Тейлора с остаточным членом в форме Лагранжа} Пусть $\exists f^{(n+1)}(x), \forall x \in U_\delta(x_0)$, тогда
 \begin{equation*}
     f(x) = \sum\limits_{k=0}^n \frac{f^{(k)}(x_0)}{k!} (x-x_0)^k + \frac{f^{(n+1)}(\xi)}{(n+1)!} (x - x_0)^{n+1}, \xi \in (x_0, x)
 \end{equation*}
