--- a/solutions/differential/20.tex
+++ b/solutions/differential/20.tex
@@ -1,9 +1,21 @@
 \subsection{Линейные обыкновенные дифференциальные уравнения с постоянными коэффициентами и правой частью – квазимногочленом.}
 
+\Def Обыкновенным ДУ n-го порядка называется соотношение вида 
+
+\begin{equation*}
+    F(x, 'y, \dots, y^{(n)}) = 0,
+\end{equation*}
+
+где $x$ -- независимая переменная, $y(x)$ -- искомая вещественнозначная функция, зависимость $F$ от $y^{(n)}$ не является фиктивной.
+
+\Def Функция $phi(x): I \rightarrow \R$ называется решением ДУ, если после замены $y$ на $phi$ равенство выше выполнено тождественно на $I$.
+
+Общее решение ДУ -- это множество всех его решений. 
+
 \subsubsection{Roadmap}
 
 \begin{enumerate}
-    \item Сначала докажем теорему Коши, на которой базируются все доказательства
+    \item Сначала сформулируем теорему Коши, на которой базируются все доказательства
     \item Затем рассмотрим однородные уравнения (в правой части 0)
     \begin{enumerate}
         \item Рассмотрим простой случай (n различных корней характеристического уравнения)
@@ -16,6 +28,8 @@
         \item Научимся искать частное решение, когда правая часть -- квазимногочлен
     \end{enumerate}
 \end{enumerate}
+
+\Note В этой теме если явно не указано, под $G$ имеется в виду область -- непустое открытое линейно связное множество. 
 
 \subsubsection{Теорема Коши}
 
@@ -73,7 +87,7 @@
 
 \Theor{Коши о существовании и единственности решения задачи Коши}
 
-Пусть $f \in C(G), f \in Lip_y(G), G \in \R^{n+1}$ - область.
+Пусть $f \in C(G), f \in Lip_y(G), G \subset \R^{n+1}$ - область.
 
 Тогда $\forall (x_0, y_0) \in G \quad \exists I \subset \R, x_0 \in I, y: I \rightarrow \R^n$ такие, что $y$ является решением задачи Коши в окрестности $I$ точки $x_0$, причем любое другое решение задачи Коши локально совпадает с $y(x)$ в точке $x_0$.
 
